# smartespresso

./: .gitignore  CMakeLists.txt  JSON Specification  ZAMBI.json  JSON Specification MADALINA.json  JSON Specification MIRCEA.json  JSON Specification REBECA.json  JSON Specification.json  README.md  json_mockup.txt  smart-espressor.cpp
